Mon, 15 Jan 2007 21:06:41 +0100 <thp@perli.net>
        * src/gpodder/libopmlreader.py: Fixed a small bug, thanks (again) 
          to Nick [nikosapi gmail com] for pointing that out :)

Mon, 15 Jan 2007 19:09:57 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Fixed a bug with the download dir when 
          starting off with a fresh gPodder install (thanks to Nick [nikosapi 
          gmail com] for reporting)
        * bin/gpodder: bumped version + release date

Wed, 10 Jan 2007 18:47:26 +0100 <thp@perli.net>
        * data/po/pt.po: Updated pt_PT translation (thanks to Joel Calado)

Sat,  6 Jan 2007 15:33:33 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Fixed a bug that prevented reading 
          the download location from the config file. sorry ;)

Sat,  6 Jan 2007 14:45:20 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Re-factured gPodderChannelReader
          to not have static members when they're not needed; only add 
          channel to the list if our rssReader returns a valid channel
        * src/gpodder/librssreader.py: Removed rssErrorHandler class 
          and added handling routines directly to rssReader class; re-factor 
          static members to object members; do better error handling, etc..
        * src/gpodder/libopmlreader.py: Don't use rssErrorHandler from 
          librssreader but handle errors directly in opmlReader
        * src/gpodder/gpodder.py: Only ask user to download newer episodes 
          when the channel really has been added (thanks to Alain Tauch for 
          bringing this bug to my attention)
        * bin/gpodder: Bumped version + release date - this being the first 
          svn revision to mention 2007 in the version string :) Enjoy!

Sat,  6 Jan 2007 14:06:31 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Set the default download dir to 
          some same value when initializing gPodderLib