@@ -1,3 +1,11 @@
+Tue, 16 Jan 2007 19:26:50 +0100 <thp@perli.net>
+        * src/gpodder/libipodsync.py: Nick (nikosapi gmail com) reported 
+          that when compiling PyID3 from source, its name will be lowercase, 
+          so we simply check for both cases now (all uppercase/all lowercase)
+          and try to cope with both possibilities. Why is the naming different 
+          from distro to distro, anyway? ;)
+        * bin/gpodder: version + release date bump
+
 Mon, 15 Jan 2007 21:06:41 +0100 <thp@perli.net>
         * src/gpodder/libopmlreader.py: Fixed a small bug, thanks (again) 
           to Nick [nikosapi gmail com] for pointing that out :)
